--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,216 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+
+:root {
+  --strongCyan: hsl(172, 67%, 45%);
+  --veryDarkCyan: hsl(183, 100%, 15%);
+  --darkGrayishCyan: hsl(186, 14%, 43%);
+  --darkGrayishCyan2: hsl(184, 14%, 56%);
+  --lightGrayishCyan: hsl(185, 41%, 84%);
+  --lightGrayishCyan2: hsl(189, 41%, 97%);
+  --white: hsl(0, 0%, 100%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Space Mono', monospace;
+  font-weight: 400;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  padding: 5rem 0;
+  background: var(--lightGrayishCyan);
+}
+
+.heading {
+  color: var(--veryDarkCyan);
+  letter-spacing: 5px;
+  font-weight: 700;
+  margin-bottom: 3rem;
+}
+
+.main-container {
+  background: var(--white);
+  width: 100%;
+  padding: 2rem 0;
+  border-radius: 30px;
+  position: relative;
+}
+
+.inner-container {
+  padding: 0 2rem;
+  margin: 0 auto;
+}
+
+.inner-container h4 {
+  color: var(--darkGrayishCyan);
+  margin-bottom: 0.5rem;
+}
+
+.form-control {
+  width: 100%;
+  position: relative;
+  display: grid;
+  margin-bottom: 1.5rem;
+}
+
+.form-control input {
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  border: transparent;
+  outline: none;
+  padding: 0.5rem 1rem;
+  background: var(--lightGrayishCyan2);
+  font-size: 24px;
+  color: var(--veryDarkCyan);
+  text-align: right;
+  font-weight: 700;
+}
+
+.form-control input::placeholder {
+  color: var(--veryDarkCyan);
+}
+
+.form-control input:focus {
+  border: 2px solid var(--strongCyan);
+}
+
+.form-control .error {
+  border: 2px solid red;
+}
+
+.form-control span {
+  color: var(--lightGrayishCyan);
+  font-size: 24px;
+  position: absolute;
+  top: 20%;
+  left: 4%;
+  transform: translate(-20%, -4%);
+  font-weight: 700;
+}
+
+.tip-btns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(auto, 1fr));
+  gap: 0.75rem;
+  margin-bottom: 2rem;
+}
+
+.tip-btn {
+  background: var(--veryDarkCyan);
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  border: transparent;
+  outline: none;
+  color: var(--white);
+  font-size: 24px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.active {
+  background: var(--strongCyan);
+  color: var(--veryDarkCyan);
+}
+
+.custom-input {
+  width: 100%;
+  background: var(--lightGrayishCyan2);
+  font-size: 24px;
+  text-align: center;
+  font-weight: 700;
+  color: var(--veryDarkCyan);
+  border-radius: 5px;
+  border: none;
+  outline: none;
+}
+
+.custom-input::placeholder {
+  color: var(--darkGrayishCyan);
+}
+
+.custom-input:focus {
+  border: 2px solid var(--strongCyan);
+}
+
+.showcase-menu {
+  background: var(--veryDarkCyan);
+  padding: 1.5rem;
+  border-radius: 15px;
+  position: relative;
+}
+
+.amount-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.amount-container h1 {
+  color: var(--strongCyan);
+}
+
+.amount h4 {
+  color: var(--white);
+}
+
+.amount h5 {
+  color: var(--darkGrayishCyan);
+}
+
+.reset {
+  width: 100%;
+  padding: 0.75rem 2rem;
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--veryDarkCyan);
+  background: var(--strongCyan);
+  outline: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all 0.3s linear;
+}
+
+.calculate {
+  margin-bottom: 1rem;
+}
+
+.reset:hover {
+  background: var(--lightGrayishCyan);
+}
+
+@media screen and (min-width: 768px) {
+  .main-container {
+    width: 70vw;
+    margin: 0 auto;
+  }
+  .inner-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 2rem;
+  }
+  .tip-btns {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .reset {
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    width: 90%;
+  }
+
+  .calculate {
+    bottom: 16%;
+  }
 }
